--- a/ExpertTire/app/src/main/AndroidManifest.xml
+++ b/ExpertTire/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:name="android.hardware.Camera"
         android:required="true" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,7 +19,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FotoPedidoActivity"></activity>
+
+        <meta-data  android:name="com.google.firebase.messaging.default_notification_channel_id"
+                    android:value=" my_channel_id_01" />
+
+        <activity android:name=".NotificacionesActivity"></activity>
+        <activity android:name=".FotoPedidoActivity" />
         <activity android:name=".ContactanosActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -45,6 +49,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+
+        <service android:name=".MyAndroidFirebaseMsgService" android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
