cambios menores de clase

--- a/ExpertTire/app/src/main/AndroidManifest.xml
+++ b/ExpertTire/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <uses-feature
         android:name="android.hardware.Camera"
@@ -58,7 +61,7 @@
 
         <service
             android:name=".MyAndroidFirebaseMsgService"
-            android:exported="false">
+            >
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
