Notificación: se agrega imagen

--- a/ExpertTire/app/src/main/AndroidManifest.xml
+++ b/ExpertTire/app/src/main/AndroidManifest.xml
@@ -27,7 +27,6 @@
             android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -35,6 +34,12 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value=" my_channel_id_01" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/phone" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorPrimaryDark" />
 
         <activity android:name=".NotificacionesActivity" />
         <activity android:name=".FotoPedidoActivity" />
@@ -59,9 +64,7 @@
         </activity>
         <activity android:name=".MainActivity" />
 
-        <service
-            android:name=".MyAndroidFirebaseMsgService"
-            >
+        <service android:name=".MyAndroidFirebaseMsgService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
