--- a/ExpertTire/app/src/main/AndroidManifest.xml
+++ b/ExpertTire/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:required="true" />
 
     <application
+        android:name=".Globales"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -71,9 +72,11 @@
         </activity>
         <activity android:name=".MainActivity" />
 
-        <service android:name=".MyAndroidFirebaseMsgService">
+        <service android:name=".MyAndroidFirebaseMsgService"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
     </application>
