--- a/ExpertTire/app/src/main/AndroidManifest.xml
+++ b/ExpertTire/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <uses-feature
         android:name="android.hardware.Camera"
@@ -23,18 +24,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true"
-        >
-
-        <activity android:name=".PreferenciasActivity">
-        </activity>
-
-
+        android:usesCleartextTraffic="true">
+        <activity android:name=".LocalActivity"></activity>
+        <activity android:name=".PreferenciasActivity"></activity>
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -67,12 +65,11 @@
         <activity
             android:name=".UbicarPuntoVentaActivity"
             android:label="@string/title_activity_ubicar_punto_venta" />
-        <activity android:name=".BienvenidaActivity">
-
-        </activity>
+        <activity android:name=".BienvenidaActivity"></activity>
         <activity android:name=".MainActivity" />
 
-        <service android:name=".MyAndroidFirebaseMsgService"
+        <service
+            android:name=".MyAndroidFirebaseMsgService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
